Improve position of chat-button and fix margins for hamburger on mobile devices

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -82,7 +82,7 @@ a:hover {
 @media only screen and (max-width: 415px) {
   .container {
     transition: 1s;
-    margin: 0px 4%;
+    margin: 0px 2%;
     padding-bottom: 10px;
     min-height: 100vh;
   }
@@ -108,6 +108,10 @@ a:hover {
   color: black;
 }
 
+.right-floated {
+  float: right;
+}
+
 .bson-button-disabled {
   background-color: black;
   border: 1.5px solid black;
@@ -118,8 +122,8 @@ a:hover {
 }
 
 .btn-large {
-  font-size: 22px !important;
-  padding: 6px 12px !important;
+  font-size: 20px !important;
+  padding: 5px 10px !important;
 }
 
 .bson-button:hover {
@@ -142,9 +146,18 @@ a:hover {
   height: 75vh;
 }
 
+.game-header-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  width: 280px;
+}
+
 .chat-box {
   flex-grow: 4;
-  width:100%;
+  width: 100%;
 }
 
 .contents {
