--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -63,7 +63,7 @@
 }
 
 .side-container {
-  margin: 30px 20px;
+  margin: 10px 20px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -77,7 +77,7 @@
 @media screen and (max-width: 415px) {
   #hamburger {
     display: block;
-    margin: 20px 0px;
+    margin: 10px 0px;
   }
 
   #navbar-top {
